force-app/main/default/objects/Lead/fields/Activity_Choice__c.field-meta.xml
<CustomField>
    <fullName>Activity_Choice__c</fullName>
    <label>Activity Choice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A Activity</fullName>
            </value>
            <value>
                <fullName>B Activity</fullName>
            </value>
            <value>
                <fullName>C Activity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>