force-app/main/default/objects/Lead/fields/Meal_and_Drink_Selection__c.field-meta.xml
<CustomField>
    <fullName>Meal_and_Drink_Selection__c</fullName>
    <label>Meal and Drink Selection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>