force-app/main/default/objects/Lead/fields/Voyage_Days__c.field-meta.xml
<CustomField>
    <fullName>Voyage_Days__c</fullName>
    <label>Voyage Days</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7 Days</fullName>
            </value>
            <value>
                <fullName>14 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>