force-app/main/default/objects/Lead/fields/Voyage_Type__c.field-meta.xml
<CustomField>
    <fullName>Voyage_Type__c</fullName>
    <label>Voyage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cruise</fullName>
            </value>
            <value>
                <fullName>Yacth</fullName>
            </value>
            <value>
                <fullName>Gulet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>