force-app/main/default/objects/Lead/recordTypes/Family.recordType-meta.xml
<RecordType>
    <fullName>Family</fullName>
    <active>true</active>
    <businessProcess>Family</businessProcess>
    <label>Family</label>
</RecordType>